<?xml version="1.0"?>
<package>
  <name>models</name>
  <version>0.0.0</version>
  <description>The models package</description>

  <maintainer email="tkorthals@techfak.uni-bielefeld.de">Timo Korthals</maintainer>

  <license>BSD</license>

  <author email="tkorthals@techfak.uni-bielefeld.de">Timo Korthals</author>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
  </export>
</package>